Enable single address geocoding with GET
